fix: change scrollbar property

--- a/shelter/css/popup.css
+++ b/shelter/css/popup.css
@@ -26,6 +26,11 @@ body.popup-no-scroll {
   overflow-y: hidden;
 }
 
+html,
+body {
+  scrollbar-gutter: stable;
+}
+
 .popup-container {
   position: absolute;
   top: 50%;
@@ -247,12 +252,16 @@ body.popup-no-scroll {
     height: fit-content;
   }
 
+  .popup-btn {
+    right: -3rem;
+  }
+
   .popup-content {
     width: 24rem;
     min-height: 34.1rem;
     height: fit-content;
   }
-  
+
   .popup-img {
     display: none;
   }
